[package]
name = "rust_googleapis_grpc"
version = "0.1.0"
authors = ["kevin <me@kvnvelasco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = { version = "0.1.1", features = ["tls", "tls-roots"]}
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2.13", features = ["macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.50"
reqwest = { version =  "0.10.4", features =["json"]}

[build-dependencies]
tonic-build = "0.1.1"